fix: header z-index and description responsive

--- a/asset/css/description.css
+++ b/asset/css/description.css
@@ -156,7 +156,7 @@
 
 @media only screen and (max-width: 1440px) {
   .description-ctn {
-    padding: 0 14rem;
+    padding: 0 8rem 0 14rem;
   }
 }
 
