--- a/asset/css/header.css
+++ b/asset/css/header.css
@@ -11,7 +11,7 @@
   position: sticky;
   top: 0;
 
-  z-index: 3;
+  z-index: 999;
 }
 
 .header__menu {
